--- a/JRMDS-Proto/pom.xml
+++ b/JRMDS-Proto/pom.xml
@@ -26,7 +26,12 @@
             <artifactId>hibernate-validator</artifactId>
             <version>5.1.3.Final</version>
         </dependency>
-    </dependencies>
+        <dependency>
+        	<groupId>org.springframework.boot</groupId>
+        	<artifactId>spring-boot-starter-thymeleaf</artifactId>
+        	<version>1.0.0.RELEASE</version>
+        </dependency>
+  </dependencies>
 
     <properties>
         <!-- use UTF-8 for everything -->
