--- a/rest-neo4j-prototype/pom.xml
+++ b/rest-neo4j-prototype/pom.xml
@@ -50,6 +50,11 @@
             <groupId>org.springframework.data</groupId>
             <artifactId>spring-data-neo4j</artifactId>
         </dependency>
+	    <dependency>
+	    	<groupId>org.springframework.data</groupId>
+	    	<artifactId>spring-data-neo4j-rest</artifactId>
+	    	<version>3.2.1.RELEASE</version>
+	    </dependency>
     </dependencies>
 
     <repositories>
