--- a/rest-neo4j-prototype/.project
+++ b/rest-neo4j-prototype/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>rest-neo4j-prototype</name>
+	<name>prototype-muster-erweiterbar</name>
 	<comment></comment>
 	<projects>
 	</projects>
