--- a/origin-rest-neo4j-prototype2/src/main/resources/application.properties
+++ b/origin-rest-neo4j-prototype2/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=80
+server.port=8080
 server.address=0.0.0.0
 
 spring.thymeleaf.prefix=classpath:/templates/
@@ -6,4 +6,4 @@ spring.thymeleaf.suffix=.html
 spring.thymeleaf.mode=HTML5
 spring.thymeleaf.encoding=UTF-8
 spring.thymeleaf.content-type=text/html 
-spring.thymeleaf.cache=true 
+spring.thymeleaf.cache=false 
