--- a/origin-rest-neo4j-prototype2/pom.xml
+++ b/origin-rest-neo4j-prototype2/pom.xml
@@ -47,6 +47,11 @@
 			<artifactId>spring-data-neo4j-rest</artifactId>
 			<version>3.1.4.RELEASE</version>
              </dependency>
+             <dependency>
+             	<groupId>org.codehaus.jackson</groupId>
+             	<artifactId>jackson-mapper-asl</artifactId>
+             	<version>1.9.7</version>
+             </dependency>
     </dependencies>
 
     <repositories>
