--- a/origin-rest-neo4j-prototype2/pom.xml
+++ b/origin-rest-neo4j-prototype2/pom.xml
@@ -59,6 +59,15 @@
              	<artifactId>jackson-mapper-asl</artifactId>
              	<version>1.9.7</version>
              </dependency>
+             
+             <dependency>
+    <groupId>javax.validation</groupId>
+    <artifactId>validation-api</artifactId>
+    <version>1.1.0.Final</version>
+</dependency>
+
+
+             
     </dependencies>
 
     <repositories>
